# nftopia-stellar

./: .gitignore  README.md  TODO.md  package-lock.json
.github/workflows/: nftopia-admin.yml  nftopia-backend.yml  nftopia-frontend.yml  nftopia-mobile-app.yml  nftopia-stellar.yml
nftopia-backend/: .dockerignore  .env.example  .env.production.template  Dockerfile  LINTING-FIXES.md  RBAC-IMPLEMENTATION.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
nftopia-backend-src/: app.controller.ts  main.ts
nftopia-frontend/: .dockerignore  Dockerfile  ISSUE_DETAILS.md  QA-RESPONSIVENESS-CHECKLIST.md  README.md  RESPONSIVE_DESIGN_GUIDE.md  i18n-README.md  jest.config.js  jest.setup.js  lighthouse-desktop.html  lighthouse-mobile.html  lighthouserc.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.test.json
nftopia-mobile-app/: .eslintrc.json  App.tsx  README.md  app.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
nftopia-stellar/: Cargo.toml  VERSIONING.md
nftopia-stellar/contracts/nft_contract/: Cargo.toml  Makefile  README.md
nftopia-stellar/contracts/nft_contract/src/: access_control.rs  error.rs  events.rs  interface.rs  lib.rs  metadata.rs  royalty.rs  storage.rs  test.rs  token.rs  transfer.rs  types.rs  utils.rs
nftopia-stellar/contracts/nft_contract/src/test/: integration_tests.rs  unit_tests.rs
nftopia-stellar/contracts/nft_contract/test/: integration_tests.rs  mod.rs  unit_tests.rs
(+568 files in other folders)
